--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   datasource:
     driver: org.postgresql.Driver
@@ -7,12 +7,14 @@ spring:
     username: postgres
     password: sa
     poolSize: 10
-  cache:
-    capacity: 10
-    algorithm: LRUCache
-  liquibase:
-    change-log: classpath:db/db.changelog-master.yml
-    enabled: true
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        hbm2ddl.auto: update
+        show_sql: true
+        format_sql: true
+        physical_naming_strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging:
   level:
     root: INFO
